kubernetes/party-battle/backend/catchall/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: party-battle-backend-catchall
  labels:
    app: party-battle-backend-catchall

spec:
  replicas: 1
  selector:
    matchLabels:
      app: party-battle-backend-catchall
  template:
    metadata:
      labels:
        app: party-battle-backend-catchall
    spec:
      automountServiceAccountToken: false
      containers:
        - name: party-battle-backend
          image: ghcr.io/thirty-degrees/api-version-unsupported-colyseus:f2d133dacfc380140d905ef6bada572770802ff9
          ports:
            - name: api
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
