kubernetes/party-battle/backend/catchall/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: party-battle-backend-catchall

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app: party-battle-backend-catchall
